--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "jest": "^29.7.0",
     "mongoose": "^8.13.0",
     "supertest": "^7.1.0"
