Restoring package.json to the state it was before this branch, just in case

--- a/questionservice/package.json
+++ b/questionservice/package.json
@@ -4,7 +4,7 @@
   "main": "wikidata-service.js",
   "scripts": {
     "start": "node wikidata-service.js",
-    "test": "jest --coverage"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
