--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -3,16 +3,17 @@ FROM node:22
 COPY . /app
 WORKDIR /app
 
-#Install the dependencies
-RUN npm install --omit=dev
-
 ARG API_URI="http://localhost:8000"
 ENV REACT_APP_API_ENDPOINT=$API_URI
 
+#Install the dependencies
+RUN npm install
+
 #Create an optimized version of the webapp
 RUN npm run build
-RUN npm install -g serve --production
+
+#Expose the port the app runs on
+EXPOSE 3000
 
 #Execute npm run prod to run the server
 CMD [ "npm", "run", "prod" ]
-#CMD ["npm", "start"]
