--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,17 +56,19 @@ jobs:
     needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
-      env:
-        API_URI: http://${{ secrets.DEPLOY_HOST }}:8000
       with:
-          name: arquisoft/wichat_en3b/webapp
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io
-          workdir: webapp
-          buildargs: API_URI
+        name: arquisoft/wichat_en3b/webapp
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        registry: ghcr.io
+        workdir: webapp
+        buildargs: REACT_APP_API_ENDPOINT=http://${{ secrets.DEPLOY_HOST }}:8000
+        platforms: linux/arm64
+
   docker-push-authservice:
     name: Push auth service Docker Image to GitHub Packages
     runs-on: ubuntu-latest
@@ -86,7 +88,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           workdir: users/authservice
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           
   docker-push-userservice:
     name: Push user service Docker Image to GitHub Packages
@@ -97,6 +99,8 @@ jobs:
     needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
@@ -105,6 +109,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
         workdir: users/userservice
+        platforms: linux/arm64
 
   docker-push-llmservice:
     name: Push llm service Docker Image to GitHub Packages
@@ -115,6 +120,8 @@ jobs:
     needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
@@ -123,6 +130,8 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
         workdir: llmservice
+        buildargs: LLM_API_KEY=${{ secrets.LLM_API_KEY }}
+        platforms: linux/arm64
 
   docker-push-questionservice:
     name: Push question service Docker Image to GitHub Packages
@@ -133,6 +142,8 @@ jobs:
     needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
@@ -141,6 +152,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
         workdir: questionservice
+        platforms: linux/arm64
 
   docker-push-gatewayservice:
     name: Push gateway service Docker Image to GitHub Packages
@@ -151,6 +163,8 @@ jobs:
     needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Update OpenAPI configuration
       run: |
         DEPLOY_HOST=${{ secrets.DEPLOY_HOST }}
@@ -163,6 +177,9 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
         workdir: gatewayservice
+        buildargs: FRONTEND_URL=http://${{ secrets.DEPLOY_HOST }}:3000
+        platforms: linux/arm64
+
   deploy:
     name: Deploy over SSH
     runs-on: ubuntu-latest
