--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,10 +57,10 @@ services:
     container_name: llmservice-wichat_en3b
     image: ghcr.io/arquisoft/wichat_en3b/llmservice:latest
     profiles: ["dev", "prod"]
-    env_file:
-      - .env
     build: 
       context: ./llmservice
+      args:
+        LLM_API_KEY: ${LLM_API_KEY}
     ports:
       - "8003:8003"
     networks:
@@ -82,6 +82,7 @@ services:
     networks:
       - mynetwork
     environment:
+      FRONTEND_URL: ${FRONTEND_URL}
       AUTH_SERVICE_URL: http://authservice:8002
       USER_SERVICE_URL: http://userservice:8001
       LLM_SERVICE_URL: http://llmservice:8003
@@ -91,7 +92,10 @@ services:
     container_name: webapp-wichat_en3b
     image: ghcr.io/arquisoft/wichat_en3b/webapp:latest
     profiles: ["dev", "prod"]
-    build: ./webapp
+    build:
+      context: ./webapp
+      args:
+        REACT_APP_API_ENDPOINT: ${REACT_APP_API_ENDPOINT}
     depends_on:
       - gatewayservice
     ports:
