--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "supertest": "^7.1.0"
   },
   "dependencies": {
+    "i18next": "^24.2.3",
     "lucide-react": "^0.487.0",
+    "react-i18next": "^15.4.1",
     "recharts": "^2.15.1"
   }
 }
