--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,16 +10,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "i18next": "^24.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "recharts": "^2.15.1",
-    "web-vitals": "^4.2.4",
-    "i18next": "^24.2.3", 
-    "react-i18next": "^15.4.1"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -69,5 +69,4 @@
     "postcss": ">=8.4.31",
     "typescript": "5.8.3"
   }
-  
 }
