--- a/llmservice/Dockerfile
+++ b/llmservice/Dockerfile
@@ -5,8 +5,9 @@ FROM node:22
 WORKDIR /usr/src/llmservice
 
 # Set environment variables for the Node.js application
-ARG LLM_API_KEY
+ARG LLM_API_KEY, GEMINI_LLM_API_KEY
 ENV LLM_API_KEY=${LLM_API_KEY}
+ENV GEMINI_LLM_API_KEY=${GEMINI_LLM_API_KEY}
 
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
