--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,16 +131,17 @@ services:
       - ./gatewayservice/monitoring/grafana/provisioning:/etc/grafana/provisioning
     environment:
       - GF_SERVER_HTTP_PORT=9091
-      - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-      - GF_SERVER_ROOT_URL=http://localhost:8000/admin/monitoring
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_AUTH_BASIC_ENABLED=false
+      - GF_SERVER_ROOT_URL=http://localhost:8000
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
+
     ports:
       - "9091:9091"
     depends_on: 
       - prometheus
-
 
 volumes:
   mongodb_data:
