--- a/gatewayservice/package.json
+++ b/gatewayservice/package.json
@@ -23,6 +23,7 @@
         "express": "^4.21.2",
         "express-openapi": "^12.1.3",
         "express-prom-bundle": "^8.0.0",
+        "http-proxy": "^1.18.1",
         "http-proxy-middleware": "^3.0.5",
         "jsonwebtoken": "^9.0.2",
         "swagger-ui-express": "^5.0.1",
