--- a/gatewayservice/package.json
+++ b/gatewayservice/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/arquisoft/wichat_en3b#readme",
     "dependencies": {
         "axios": "^1.7.9",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "express": "^4.21.2",
         "express-openapi": "^12.1.3",
