Added prod versions to grafana and prometheus

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus-wichat_en3b
-    profiles: ["dev"]
+    profiles: ["dev", "prod"]
     networks:
       - mynetwork
     volumes:
@@ -123,7 +123,7 @@ services:
   grafana:
     image: grafana/grafana
     container_name: grafana-wichat_en3b
-    profiles: ["dev"]
+    profiles: ["dev", "prod"]
     networks:
       - mynetwork
     volumes:
