--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,13 +27,33 @@ jobs:
     - name: Analyze with SonarCloud
       uses: SonarSource/sonarqube-scan-action@master
       env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  e2e-tests:
+    needs: [unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 22
+    - run: npm --prefix users/authservice install
+    - run: npm --prefix users/userservice install
+    - run: npm --prefix llmservice install
+    - run: npm --prefix questionservice install
+    - run: npm --prefix gatewayservice install
+    - run: npm --prefix webapp install
+    - name: Build webapp without CI warnings as errors
+      run: npm --prefix webapp run build
+      env:
+        CI: false
+    - run: npm --prefix webapp run test:e2e
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
@@ -55,6 +75,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
@@ -75,6 +96,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
@@ -95,6 +117,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
@@ -116,6 +139,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
@@ -136,6 +160,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Docker Buildx
@@ -160,6 +185,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker-push-userservice,docker-push-authservice,docker-push-llmservice,docker-push-questionservice,docker-push-gatewayservice,docker-push-webapp]
     steps:
+    - name: Upload Prometheus and Grafana configuration
+      run: |
+        scp -i ${{ secrets.DEPLOY_KEY }} -r ./gatewayservice/monitoring/prometheus ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
+        scp -i ${{ secrets.DEPLOY_KEY }} -r ./gatewayservice/monitoring/grafana ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
+    
     - name: Deploy over SSH
       uses: fifsky/ssh-action@master
       with:
