Try to fix SSH deployment

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,9 +187,12 @@ jobs:
     steps:
     - name: Upload Prometheus and Grafana configuration
       run: |
-        scp -i ${{ secrets.DEPLOY_KEY }} -r ./gatewayservice/monitoring/prometheus ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
-        scp -i ${{ secrets.DEPLOY_KEY }} -r ./gatewayservice/monitoring/grafana ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
-    
+        echo "${{ secrets.DEPLOY_KEY }}" > deploy_key.pem
+        chmod 600 deploy_key.pem
+        scp -i deploy_key.pem -r ./gatewayservice/monitoring/prometheus ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
+        scp -i deploy_key.pem -r ./gatewayservice/monitoring/grafana ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
+        rm deploy_key.pem
+
     - name: Deploy over SSH
       uses: fifsky/ssh-action@master
       with:
