--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -188,17 +188,29 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Add host to known_hosts
-      run: |
-        echo "${{ secrets.DEPLOY_KEY }}" > deploy_key.pem
-        chmod 600 deploy_key.pem
-        ssh-keyscan -H ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
+    - name: Upload Prometheus config
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.DEPLOY_HOST }}
+        username: ${{ secrets.DEPLOY_USER }}
+        key: ${{ secrets.DEPLOY_KEY }}
+        port: 22
+        source: "./gatewayservice/monitoring/prometheus/"
+        target: "~/"
+        overwrite: true
+        strip_components: 0
 
-    - name: Upload Prometheus and Grafana configuration
-      run: |
-        scp -i deploy_key.pem -r ./gatewayservice/monitoring/prometheus/ ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
-        scp -i deploy_key.pem -r ./gatewayservice/monitoring/grafana/ ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:~/
-        rm deploy_key.pem
+    - name: Upload Grafana config
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.DEPLOY_HOST }}
+        username: ${{ secrets.DEPLOY_USER }}
+        key: ${{ secrets.DEPLOY_KEY }}
+        port: 22
+        source: "./gatewayservice/monitoring/grafana/"
+        target: "~/"
+        overwrite: true
+        strip_components: 0
 
     - name: Deploy over SSH
       uses: fifsky/ssh-action@master
